hphp/hack/test/typecheck/attributes/typeparam_function.php.exp
File "typeparam_function.php", line 8, characters 16-18:
Invalid argument (Typing[4110])
File "typeparam_function.php", line 5, characters 31-33:
This is an int
File "typeparam_function.php", line 8, characters 16-18:
It is incompatible with a float
